--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^10.2.0
   smooth_page_indicator: ^1.1.0
-  flutter_inappwebview: ^5.7.2+3
+  # flutter_inappwebview: ^5.7.2+3
   http: ^1.1.0
-  appsflyer_sdk: ^6.12.2
   in_app_review: ^2.0.6
   dio: ^5.3.2
   flutter_svg: ^2.0.7
