--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^10.2.0
   smooth_page_indicator: ^1.1.0
-  # flutter_inappwebview: ^5.7.2+3
+  flutter_inappwebview: ^5.7.2+3
   http: ^1.1.0
   in_app_review: ^2.0.6
   dio: ^5.3.2
@@ -41,9 +41,6 @@ dependencies:
   flutter_slidable: ^3.0.0
   font_awesome_flutter: ^10.5.0
   intl: ^0.18.1
-  firebase_core: ^2.1.1
-  firebase_messaging: ^14.2.2
-  flutter_local_notifications: ^9.8.0+1
   overlay_support: ^2.1.0
   
 
